--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-PyYAML==3.11
-ipython==3.1.0
-mock==1.0.1
-networkx==1.9.1
-nose==1.3.6
-py2neo==2.0.7
-pydot==1.0.2
-pygraphviz==1.2
-pyparsing==1.5.7
-requests==2.7.0
-six==1.9.0
-dateutils==0.6.6
+PyYAML==3.12
+ipython==6.4.0
+py2neo==4.0.0
+requests==2.18.4
+python-dateutil==2.7.3
 
