--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-PyYAML==5.1
-ipython==6.4.0
-py2neo==4.1.0
-prompt-toolkit==1.0.15
-requests==2.22.0
-python-dateutil==2.7.3
-neo4j-driver==1.6.2
+PyYAML>=5.1
+py2neo>=4.3.0
+prompt-toolkit>=1.0.15
+requests>=2.22.0
+python-dateutil>=2.7.3
+neo4j-driver>=1.6.2
