--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.6"
 click = "^7.1.2"
+python-dotenv = "^0.14.0"
+neo4j = "^4.0.1"
+aiohttp = {extras = ["speedups"], version = "^3.6.2"}
+ujson = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 prospector = "^1.3.0"
