--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,11 @@ ujson = "^3.0.0"
 [tool.poetry.dev-dependencies]
 prospector = "^1.3.0"
 black = "^19.10b0"
+pytest = "^5.4.3"
+
+[tool.poetry.scripts]
+primport = 'popit_relationship.pyimport:main'
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
-[tool.poetry.scripts]
-primport = 'popit_relationship.main:main'
