--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python-dotenv = "^0.14.0"
 neo4j = "^4.0.1"
 aiohttp = {extras = ["speedups"], version = "^3.6.2"}
 ujson = "^3.0.0"
+toolz = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 prospector = "^1.3.0"
@@ -18,7 +19,7 @@ black = "^19.10b0"
 pytest = "^5.4.3"
 
 [tool.poetry.scripts]
-primport = 'popit_relationship.pyimport:main'
+primport = 'popit_relationship.primport:main'
 
 [build-system]
 requires = ["poetry>=0.12"]
