--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 NEO4J_AUTH=neo4j/abc123
-NEO4J_DB=neo4j
 NEO4J_URI=bolt:localhost:7687
 
 ENDPOINT_API=https://politikus.sinarproject.org/@search
+
+CRAWL_INTERVAL=1
+
+CACHE_PATH=./primport-cache.gpickle
