--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ujson = "^3.0.0"
 toolz = "^0.10.0"
 networkx = "^2.4"
 matplotlib = "^3.3.0"
+loguru = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
